# human-exoskeleton-control-system

./: .gitignore  README.md  arm_exoskeleton_experiment_progress.md  phase1_additional_tasks.md  project_execution_plan.md
docs/3d_modeling/: 3d_modeling_material_parameters.md  arm_module_modeling_practice_demo.md
docs/architecture/: communication_architecture.md  communication_protocol.md  control_system_architecture.md  control_system_master_architecture.md  safety_mechanism.md
docs/control_system/: calibration_tuning_system.md  control_system_ai_integration.md  control_system_design.md  control_system_implementation.md  control_system_safety.md  control_system_testing_validation.md  human_machine_interface.md
docs/development_roadmap/: follow_up_development_roadmap.md
docs/material_system/: fuel_system_design.md  material_design.md  material_environmental_assessment.md  material_motion_system_integration.md  material_system_architecture.md  material_system_implementation.md  material_testing_validation.md
docs/run_system/: arm_control_system_implementation.md  arm_drive_system_design.md  arm_mechanical_design.md  arm_structure_architecture.md  back_spine_architecture.md  back_spine_control_system_implementation.md  (+2 more)
models/arm/Doc/: 任务书.md  (+2 more)
src/toolchain/cpp_control_lib/: CMakeLists.txt  debug.txt  plot_controller_response.m  task_progress.md  详细文档.md
src/toolchain/cpp_control_lib/include/: controller_base.hpp  pid_controller.hpp
src/toolchain/cpp_control_lib/tests/: test_all_controllers.cpp  test_all_controllers_simple.cpp  test_pid.cpp  test_simple.cpp
(+87 files in other folders)
